test automation demo - terminal

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,6 @@ UVG-TestAutomation-Demo.iml
 report/
 target/
 .idea/
-drivers/.DS_Store
+drivers/mac/.DS_Store
+drivers/windows/.DS_Store
+.DS_Store
